--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.11"
+    "@astrojs/preact": "^4.1.3",
+    "@fontsource/montserrat": "^5.2.8",
+    "astro": "^5.16.11",
+    "preact": "^10.28.2"
   }
 }
